--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
@@ -37,7 +37,7 @@
 
   <!-- Contenido principal -->
   <main class="container flex-grow-1 my-4">
-    <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
+    <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
     <section class="mb-4">
       <h1 class="h4 fw-bold">
@@ -94,7 +94,7 @@
   </main>
 
   <!-- Footer -->
-  <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
+  <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 </body>
 
 </html>
