--- a/GarciaMariaPablo/src/main/resources/templates/admin/otros/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/otros/paginaPrincipal.html
@@ -26,7 +26,7 @@
 
     <main class="container my-5" id="main-content">
 
-        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
+        <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <h1 class="mb-4 text-center fw-bold txt-main">Panel de Administración</h1>
 
@@ -264,7 +264,7 @@
         </section>
     </main>
 
-    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 
 </body>
 
