--- a/GarciaMariaPablo/src/main/resources/templates/global/contacto.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/contacto.html
@@ -130,7 +130,7 @@
         </div>
     </main>
 
-    <footer th:replace="~{global/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 </body>
 
 </html>
