--- a/GarciaMariaPablo/src/main/resources/templates/global/index.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/index.html
@@ -19,7 +19,7 @@
 <body class="bg-light">
 
     <th:block th:replace="~{global/_fragments/header.html :: navbar}"></th:block>
-    <th:block th:replace="~{global/_fragments/popUpMessages.html :: popUpMessages}"></th:block>
+    <th:block th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></th:block>
 
     <!-- Sección Hero -->
     <section class="py-5 bg-white">
@@ -392,7 +392,7 @@
     </section>
 
     <!-- Footer con fragmento -->
-    <div th:replace="~{global/_fragments/footer.html :: footer}"></div>
+    <div th:replace="~{_fragments/footer.html :: footer}"></div>
 
 </body>
 
