--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
@@ -22,7 +22,7 @@
     <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <main class="container flex-grow-1 my-4" role="main">
-        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
+        <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <section class="card border-0 rounded-3 shadow mx-auto mw-50vw" aria-labelledby="tituloFormularioEstado">
             <div class="card-header bg-main text-white rounded-top-3 p-3">
@@ -141,7 +141,7 @@
         </section>
     </main>
 
-    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 </body>
 
 </html>
