--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
@@ -24,7 +24,7 @@
     <main class="container flex-grow-1 my-4" role="main">
 
         <!-- Mensaje de error (si aplica) -->
-        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
+        <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <article class="card border-0 shadow rounded-3 overflow-hidden">
             <!-- Cabecera con color de marca -->
@@ -160,7 +160,7 @@
     </div>
 
     <!-- Footer -->
-    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 </body>
 
 </html>
