--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -25,7 +25,7 @@
     <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <main class="container flex-grow-1 my-4">
-        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
+        <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <section aria-labelledby="tituloListado">
             <div class="d-flex justify-content-between align-items-center mb-4">
@@ -282,7 +282,7 @@
         </div>
     </div>
 
-    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 </body>
 
 </html>
