--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
@@ -21,7 +21,7 @@
     <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <main class="container flex-grow-1 my-4" role="main">
-        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
+        <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <section class="d-flex justify-content-between align-items-center mb-4">
             <h1 class="h4 mb-0 txt-main fw-bold">
@@ -190,6 +190,6 @@
         </div>
     </div>
 
-    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 </body>
 </html>
