--- a/GarciaMariaPablo/src/main/resources/templates/error/404.html
+++ b/GarciaMariaPablo/src/main/resources/templates/error/404.html
@@ -53,7 +53,7 @@
         </div>
     </main>
 
-    <footer th:replace="~{admin/_fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 
 </body>
 </html>
